// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Slider rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-slider ant-slider-rtl css-var-root ant-slider-horizontal"
>
  <div
    class="ant-slider-rail"
  />
  <div
    class="ant-slider-track"
    style="right: 0%; width: 0%;"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-describedby="test-id"
    aria-disabled="false"
    aria-orientation="horizontal"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="ant-slider-handle"
    role="slider"
    style="right: 0%; transform: translateX(50%);"
    tabindex="0"
  />
</div>
`;

exports[`Slider should render in RTL direction 1`] = `
<div>
  <div
    class="ant-slider ant-slider-rtl css-var-root ant-slider-horizontal"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="right: 0%; width: 30%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-describedby="test-id"
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="ant-slider-handle ant-tooltip-open"
      role="slider"
      style="right: 30%; transform: translateX(50%);"
      tabindex="0"
    />
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-rtl css-var-root ant-slider-tooltip ant-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          id="test-id"
          role="tooltip"
        >
          30
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should show tooltip when hovering slider handler 1`] = `
<div
  class="ant-tooltip css-var-root ant-slider-tooltip ant-tooltip-placement-top"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
>
  <div
    class="ant-tooltip-arrow"
    style="position: absolute; bottom: 0px; left: 0px;"
  />
  <div
    class="ant-tooltip-content"
  >
    <div
      class="ant-tooltip-inner"
      id="test-id"
      role="tooltip"
    >
      30
    </div>
  </div>
</div>
`;

exports[`Slider should show tooltip when hovering slider handler 2`] = `
<div
  class="ant-tooltip ant-tooltip-hidden css-var-root ant-slider-tooltip ant-tooltip-placement-top"
  style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: auto; right: auto; bottom: 0px; box-sizing: border-box; pointer-events: none;"
>
  <div
    class="ant-tooltip-arrow"
    style="position: absolute; bottom: 0px; left: 0px;"
  />
  <div
    class="ant-tooltip-content"
  >
    <div
      class="ant-tooltip-inner"
      id="test-id"
      role="tooltip"
    >
      30
    </div>
  </div>
</div>
`;
